--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,4 +1,61 @@
 allow_embedding: false
+db_schema:
+  aktivitet:
+    client: search
+    columns:
+    - admin_ui: {order: 0, width: 200}
+      name: aktivitet
+      type: string
+    - admin_ui: {order: 1, width: 200}
+      name: dato
+      type: date
+    - admin_ui: {order: 2, width: 200}
+      name: poeng
+      type: number
+    - admin_ui: {order: 3, width: 200}
+      name: deltager
+      target: users
+      type: link_single
+    server: full
+    title: Aktivitet
+  lag:
+    client: search
+    columns:
+    - admin_ui: {order: 0, width: 200}
+      name: lagnavn
+      type: string
+    - admin_ui: {order: 1, width: 200}
+      name: deltagere
+      target: users
+      type: link_multiple
+    server: full
+    title: Lag
+  users:
+    client: none
+    columns:
+    - admin_ui: {order: 0, width: 200}
+      name: email
+      type: string
+    - admin_ui: {order: 1, width: 200}
+      name: enabled
+      type: bool
+    - admin_ui: {order: 2, width: 200}
+      name: last_login
+      type: datetime
+    - admin_ui: {order: 3, width: 200}
+      name: password_hash
+      type: string
+    - admin_ui: {order: 4, width: 200}
+      name: n_password_failures
+      type: number
+    - admin_ui: {order: 5, width: 200}
+      name: confirmed_email
+      type: bool
+    - admin_ui: {order: 6, width: 200}
+      name: signed_up
+      type: datetime
+    server: full
+    title: Users
 dependencies: []
 name: M3 App 6
 package_name: M3_App_6
@@ -8,5 +65,18 @@ runtime_options:
   server_spec: {base: python310-minimal}
   server_version: python3-sandbox
   version: 2
-services: []
-startup_form: Form1
+services:
+- client_config: {}
+  server_config: {}
+  source: /runtime/services/tables.yml
+- client_config: {allow_signup: true, confirm_email: true, enable_automatically: true, use_email: true, use_facebook: false, use_google: false}
+  server_config: {user_table: users}
+  source: /runtime/services/anvil/users.yml
+- client_config: {}
+  server_config: {}
+  source: /runtime/services/google.yml
+- client_config: {}
+  server_config: {}
+  source: /runtime/services/facebook.yml
+startup: {module: Aktivitet, type: form}
+startup_form: null
