Created ServerModule1 and Edit_Aktivitet; Edited Aktivitet.RowTemplate1, theme/parameters.yaml, Aktivitet.Form2 and Aktivitet

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -6,6 +6,8 @@ unique_ids:
     Aktivitet: 6LHPGAY352WAAF56DS4UD744L2O457UK
     Aktivitet.Form2: '1741206122014695898164765.3148'
     Aktivitet.RowTemplate1: '1741206518436455442504611.0171'
+    Edit_Aktivitet: '174120841888829854926899.689495'
   modules: {}
   scripts: {}
-  server_modules: {}
+  server_modules:
+    ServerModule1: '1741208220179582550843168.9172'
