--- a/client_code/Aktivitet/form_template.yaml
+++ b/client_code/Aktivitet/form_template.yaml
@@ -10,7 +10,7 @@ components:
     - event_bindings: {click: add_aktivitet_button_click}
       layout_properties: {}
       name: add_aktivitet_button
-      properties: {text: Legg til aktivitet}
+      properties: {role: elevated-button, text: Legg til aktivitet}
       type: Button
     layout_properties: {grid_position: 'OIZGMK,ECSPVE'}
     name: data_grid_1
