--- a/anvil.yaml
+++ b/anvil.yaml
@@ -57,8 +57,9 @@ db_schema:
     server: full
     title: Users
 dependencies: []
-name: M3 App 6
-package_name: M3_App_6
+metadata: {description: For Framo BIL, title: Aktivitetskonkurranse}
+name: Aktivitet
+package_name: Aktivitet
 renamed: true
 runtime_options:
   client_version: '3'
