--- a/anvil.yaml
+++ b/anvil.yaml
@@ -70,7 +70,7 @@ services:
 - client_config: {}
   server_config: {}
   source: /runtime/services/tables.yml
-- client_config: {allow_signup: true, confirm_email: true, enable_automatically: true, use_email: true, use_facebook: false, use_google: false}
+- client_config: {allow_signup: true, confirm_email: true, enable_automatically: true, use_email: true, use_facebook: true, use_google: true}
   server_config: {user_table: users}
   source: /runtime/services/anvil/users.yml
 - client_config: {}
