--- a/anvil.yaml
+++ b/anvil.yaml
@@ -69,6 +69,7 @@ runtime_options:
   server_spec: {base: python310-minimal}
   server_version: python3-sandbox
   version: 2
+scheduled_tasks: []
 services:
 - client_config: {}
   server_config: {}
