--- a/anvil.yaml
+++ b/anvil.yaml
@@ -87,5 +87,8 @@ services:
 - client_config: {}
   server_config: {}
   source: /runtime/services/facebook.yml
+- client_config: {}
+  server_config: {}
+  source: /runtime/services/anvil/email.yml
 startup: {module: Aktivitet, type: form}
 startup_form: null
