Edited settings, ServerModule1, Aktivitet.RowTemplate1 and Aktivitet

--- a/client_code/Aktivitet/RowTemplate1/form_template.yaml
+++ b/client_code/Aktivitet/RowTemplate1/form_template.yaml
@@ -15,6 +15,6 @@ components:
 container:
   data_bindings:
   - {code: '', property: item, writeback: false}
-  properties: {align: center}
+  properties: {align: left}
   type: DataRowPanel
 is_package: true
