--- a/client_code/Aktivitet/form_template.yaml
+++ b/client_code/Aktivitet/form_template.yaml
@@ -17,9 +17,9 @@ components:
       name: data_grid_1
       properties:
         columns:
-        - {data_key: dato, id: JKSDUP, title: Dato}
-        - {data_key: aktivitet, id: VJQQOR, title: Aktivitet}
-        - {data_key: poeng, id: OJLQEN, title: Poeng}
+        - {data_key: dato, id: JKSDUP, title: Dato, width: '100'}
+        - {data_key: aktivitet, expand: false, id: VJQQOR, title: Aktivitet}
+        - {data_key: poeng, id: OJLQEN, title: Poeng, width: '100'}
         - {data_key: column_1, id: XGBOCP, title: ''}
         role: tonal-data-grid
       type: DataGrid
@@ -49,6 +49,11 @@ components:
     layout_properties: {grid_position: 'UXSPER,VVWZMU'}
     name: Logout_button
     properties: {text: Logout, visible: false}
+    type: Button
+  - event_bindings: {click: button_1_click}
+    layout_properties: {grid_position: 'NVIUVF,ZTOUDP'}
+    name: button_1
+    properties: {text: import, visible: false}
     type: Button
   layout_properties: {slot: left-nav}
   name: column_panel_1
