--- a/anvil.yaml
+++ b/anvil.yaml
@@ -90,5 +90,5 @@ services:
 - client_config: {}
   server_config: {}
   source: /runtime/services/anvil/email.yml
-startup: {module: Aktivitet, type: form}
+startup: {module: Loggbok, type: form}
 startup_form: null
