--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -1,29 +1,3 @@
-components:
-- components:
-  - event_bindings: {click: son_button_click}
-    layout_properties: {}
-    name: son_button
-    properties: {font_size: 25, foreground: black, text: S}
-    type: Button
-  - event_bindings: {click: man_button_click}
-    layout_properties: {}
-    name: man_button
-    properties: {font_size: 25, foreground: black, text: M}
-    type: Button
-  - name: tir_button
-    properties: {font_size: 25, foreground: black, text: T}
-    type: Button
-  - layout_properties: {}
-    name: ons_button
-    properties: {font_size: 25, foreground: black, text: O}
-    type: Button
-  - layout_properties: {}
-    name: tor_button
-    properties: {font_size: 25, foreground: black, text: T}
-    type: Button
-  layout_properties: {grid_position: 'TQDTNN,CLZCJH'}
-  name: flow_panel_1
-  properties: {background: light grey, border: black}
-  type: FlowPanel
+components: []
 container: {type: ColumnPanel}
 is_package: true
