--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -1,321 +1,345 @@
 components:
 - components:
+  - event_bindings: {click: login_click}
+    layout_properties: {grid_position: 'MPVRLL,VGDAAJ'}
+    name: login
+    properties: {role: outlined-button, text: Logg inn}
+    type: Button
+  layout_properties: {grid_position: 'ACRWCP,DAEMHS'}
+  name: login_card
+  properties: {role: outlined-card}
+  type: ColumnPanel
+- components:
   - components:
-    - layout_properties: {}
-      name: label_1
-      properties: {text: 'Deltager: Donald Duck'}
-      type: Label
-    name: flow_panel_4
-    properties: {}
+    - components:
+      - layout_properties: {}
+        name: label_1
+        properties: {text: 'Deltager:'}
+        type: Label
+      - layout_properties: {}
+        name: deltager_label
+        properties: {text: Donald Duck}
+        type: Label
+      name: flow_panel_4
+      properties: {}
+      type: FlowPanel
+    - components:
+      - layout_properties: {}
+        name: label_2
+        properties: {text: 'Team: Andeby'}
+        type: Label
+      name: flow_panel_5
+      properties: {}
+      type: FlowPanel
+    layout_properties: {grid_position: 'XCTPBS,SRACPT'}
+    name: flow_panel_3
+    properties: {align: center}
     type: FlowPanel
   - components:
     - layout_properties: {}
-      name: label_2
-      properties: {text: 'Team: Andeby'}
+      name: button_2
+      properties: {icon: 'fa:long-arrow-left', text: ''}
+      type: Button
+    - name: uke_label
+      properties: {align: center, bold: true, role: title, text: 'Uke 20: 12 - 18 mai'}
       type: Label
-    name: flow_panel_5
-    properties: {}
+    - layout_properties: {}
+      name: button_1
+      properties: {icon: 'fa:long-arrow-right', text: ''}
+      type: Button
+    layout_properties: {grid_position: 'JAWFBV,BDHRAR'}
+    name: flow_panel_2
+    properties: {align: center}
     type: FlowPanel
-  layout_properties: {grid_position: 'JEJWBI,CPJATL'}
-  name: flow_panel_3
-  properties: {align: center}
-  type: FlowPanel
-- components:
-  - layout_properties: {}
-    name: button_2
-    properties: {icon: 'fa:long-arrow-left', text: ''}
+  - components:
+    - components:
+      - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
+        name: son_label
+        properties:
+          align: center
+          font_size: 10
+          spacing:
+            margin: [null, null, '0', null]
+            padding: [null, null, '0', null]
+          text: Søndag
+        type: Label
+      - event_bindings: {click: son_button_click}
+        layout_properties: {grid_position: 'XGVADB,TGGYJY'}
+        name: son_button
+        properties:
+          font_size: 25
+          foreground: black
+          spacing:
+            margin: ['0', null, null, null]
+            padding: ['0', '12', '0', '12']
+          text: '0'
+        type: Button
+      - layout_properties: {grid_position: 'JWPLVX,KFSMCP'}
+        name: son_akt_label
+        properties:
+          align: center
+          font_size: 8
+          spacing:
+            margin: ['0', null, null, null]
+            padding: ['0', null, null, null]
+          text: ''
+        type: Label
+      layout_properties: {}
+      name: column_panel_1
+      properties:
+        role: outlined-card
+        spacing:
+          padding: ['0', null, '0', null]
+      type: ColumnPanel
+    - components:
+      - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
+        name: man_label
+        properties:
+          align: center
+          font_size: 10
+          spacing:
+            margin: [null, null, '0', null]
+            padding: [null, null, '0', null]
+          text: Mandag
+        type: Label
+      - event_bindings: {click: man_button_click}
+        layout_properties: {grid_position: 'QZTGZD,BHOIWH'}
+        name: man_button
+        properties:
+          font_size: 25
+          foreground: black
+          spacing:
+            margin: ['0', null, null, null]
+            padding: ['0', '12', '0', '12']
+          text: '0'
+        type: Button
+      - layout_properties: {grid_position: 'EBOSPB,PRGYBS'}
+        name: man_akt_label
+        properties:
+          align: center
+          font_size: 8
+          spacing:
+            margin: ['0', null, null, null]
+            padding: ['0', null, null, null]
+          text: ''
+        type: Label
+      layout_properties: {}
+      name: column_panel_1_copy
+      properties:
+        role: outlined-card
+        spacing:
+          padding: ['0', '15', '0', '15']
+      type: ColumnPanel
+    - components:
+      - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
+        name: tir_label
+        properties:
+          align: center
+          font_size: 10
+          spacing:
+            margin: [null, null, '0', null]
+            padding: [null, null, '0', null]
+          text: Tirsdag
+        type: Label
+      - event_bindings: {click: tir_button_click}
+        layout_properties: {grid_position: 'ZDBUKX,YNRDRQ'}
+        name: tir_button
+        properties:
+          font_size: 25
+          foreground: black
+          spacing:
+            margin: ['0', null, null, null]
+            padding: ['0', '12', '0', '12']
+          text: '0'
+        type: Button
+      - layout_properties: {grid_position: 'PXLERO,PKVRMB'}
+        name: tir_akt_label
+        properties:
+          align: center
+          font_size: 8
+          spacing:
+            margin: ['0', null, null, null]
+            padding: ['0', null, null, null]
+          text: Jogging
+        type: Label
+      layout_properties: {}
+      name: column_panel_1_copy_2
+      properties:
+        role: outlined-card
+        spacing:
+          padding: ['0', null, '0', null]
+      type: ColumnPanel
+    - components:
+      - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
+        name: ons_label
+        properties:
+          align: center
+          font_size: 10
+          spacing:
+            margin: [null, null, '0', null]
+            padding: [null, null, '0', null]
+          text: Onsdag
+        type: Label
+      - event_bindings: {click: ons_button_click}
+        layout_properties: {grid_position: 'IXYRQO,DGJJMZ'}
+        name: ons_button
+        properties:
+          font_size: 25
+          foreground: black
+          spacing:
+            margin: ['0', null, null, null]
+            padding: ['0', '12', '0', '12']
+          text: '0'
+        type: Button
+      - layout_properties: {grid_position: 'SOIAYZ,XAITQX'}
+        name: ons_akt_label
+        properties:
+          align: center
+          font_size: 8
+          spacing:
+            margin: ['0', null, null, null]
+            padding: ['0', null, null, null]
+          text: Boksing
+        type: Label
+      layout_properties: {}
+      name: column_panel_1_copy_3
+      properties:
+        role: outlined-card
+        spacing:
+          padding: ['0', null, '0', null]
+      type: ColumnPanel
+    layout_properties: {grid_position: 'ONEAGY,JGWVFE'}
+    name: flow_panel_1
+    properties: {align: center}
+    type: FlowPanel
+  - components:
+    - components:
+      - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
+        name: tor_label
+        properties:
+          align: center
+          font_size: 10
+          spacing:
+            margin: [null, null, '0', null]
+            padding: [null, null, '0', null]
+          text: Torsdag
+        type: Label
+      - event_bindings: {click: tor_button_click}
+        layout_properties: {grid_position: 'QHWKSS,YBOXFJ'}
+        name: tor_button
+        properties:
+          font_size: 25
+          foreground: black
+          spacing:
+            margin: ['0', null, null, null]
+            padding: ['0', '12', '0', '12']
+          text: '0'
+        type: Button
+      - layout_properties: {grid_position: 'JUEBES,WOMSNG'}
+        name: tor_akt_label
+        properties:
+          align: center
+          font_size: 8
+          spacing:
+            margin: ['0', null, null, null]
+            padding: ['0', null, null, null]
+          text: Boksing
+        type: Label
+      name: column_panel_1_copy_4
+      properties:
+        role: outlined-card
+        spacing:
+          padding: ['0', null, '0', null]
+      type: ColumnPanel
+    - components:
+      - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
+        name: fre_label
+        properties:
+          align: center
+          font_size: 10
+          spacing:
+            margin: [null, null, '0', null]
+            padding: [null, null, '0', null]
+          text: Fredag
+        type: Label
+      - event_bindings: {click: fre_button_click}
+        layout_properties: {grid_position: 'IHPYUO,VXIBJA'}
+        name: fre_button
+        properties:
+          font_size: 25
+          foreground: black
+          spacing:
+            margin: ['0', null, null, null]
+            padding: ['0', '12', '0', '12']
+          text: '0'
+        type: Button
+      - layout_properties: {grid_position: 'EAQPVP,FHTBQS'}
+        name: fre_akt_label
+        properties:
+          align: center
+          font_size: 8
+          spacing:
+            margin: ['0', null, null, null]
+            padding: ['0', null, null, null]
+          text: Boksing
+        type: Label
+      name: column_panel_1_copy_5
+      properties:
+        role: outlined-card
+        spacing:
+          padding: ['0', null, '0', null]
+      type: ColumnPanel
+    - components:
+      - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
+        name: lor_label
+        properties:
+          align: center
+          font_size: 10
+          spacing:
+            margin: [null, null, '0', null]
+            padding: [null, null, '0', null]
+          text: Lørdag
+        type: Label
+      - event_bindings: {click: lor_button_click}
+        layout_properties: {grid_position: 'WZOHIV,NVIUBR'}
+        name: lor_button
+        properties:
+          font_size: 25
+          foreground: black
+          spacing:
+            margin: ['0', null, null, null]
+            padding: ['0', '12', '0', '12']
+          text: '0'
+        type: Button
+      - layout_properties: {grid_position: 'ETZXYW,AGFTEO'}
+        name: lor_akt_label
+        properties:
+          align: center
+          font_size: 8
+          spacing:
+            margin: ['0', null, null, null]
+            padding: ['0', null, null, null]
+          text: Boksing
+        type: Label
+      name: column_panel_1_copy_6
+      properties:
+        role: outlined-card
+        spacing:
+          padding: ['0', null, '0', null]
+      type: ColumnPanel
+    layout_properties: {grid_position: 'BDMOUI,DWZCYC'}
+    name: flow_panel_6
+    properties: {align: center}
+    type: FlowPanel
+  - event_bindings: {click: logout_click}
+    layout_properties: {grid_position: 'VFQUUC,JCRVEA'}
+    name: logout
+    properties: {role: outlined-button, text: Logg ut}
     type: Button
-  - name: uke_label
-    properties: {align: center, bold: true, role: title, text: 'Uke 20: 12 - 18 mai'}
-    type: Label
-  - layout_properties: {}
-    name: button_1
-    properties: {icon: 'fa:long-arrow-right', text: ''}
-    type: Button
-  layout_properties: {grid_position: 'KZBITN,TIXEGZ'}
-  name: flow_panel_2
-  properties: {align: center}
-  type: FlowPanel
-- components:
-  - components:
-    - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
-      name: son_label
-      properties:
-        align: center
-        font_size: 10
-        spacing:
-          margin: [null, null, '0', null]
-          padding: [null, null, '0', null]
-        text: Søndag
-      type: Label
-    - event_bindings: {click: son_button_click}
-      layout_properties: {grid_position: 'XGVADB,TGGYJY'}
-      name: son_button
-      properties:
-        font_size: 25
-        foreground: black
-        spacing:
-          margin: ['0', null, null, null]
-          padding: ['0', '12', '0', '12']
-        text: '0'
-      type: Button
-    - layout_properties: {grid_position: 'JWPLVX,KFSMCP'}
-      name: son_akt_label
-      properties:
-        align: center
-        font_size: 8
-        spacing:
-          margin: ['0', null, null, null]
-          padding: ['0', null, null, null]
-        text: ''
-      type: Label
-    layout_properties: {}
-    name: column_panel_1
-    properties:
-      role: outlined-card
-      spacing:
-        padding: ['0', null, '0', null]
-    type: ColumnPanel
-  - components:
-    - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
-      name: man_label
-      properties:
-        align: center
-        font_size: 10
-        spacing:
-          margin: [null, null, '0', null]
-          padding: [null, null, '0', null]
-        text: Mandag
-      type: Label
-    - event_bindings: {click: man_button_click}
-      layout_properties: {grid_position: 'QZTGZD,BHOIWH'}
-      name: man_button
-      properties:
-        font_size: 25
-        foreground: black
-        spacing:
-          margin: ['0', null, null, null]
-          padding: ['0', '12', '0', '12']
-        text: '0'
-      type: Button
-    - layout_properties: {grid_position: 'EBOSPB,PRGYBS'}
-      name: man_akt_label
-      properties:
-        align: center
-        font_size: 8
-        spacing:
-          margin: ['0', null, null, null]
-          padding: ['0', null, null, null]
-        text: ''
-      type: Label
-    layout_properties: {}
-    name: column_panel_1_copy
-    properties:
-      role: outlined-card
-      spacing:
-        padding: ['0', '15', '0', '15']
-    type: ColumnPanel
-  - components:
-    - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
-      name: tir_label
-      properties:
-        align: center
-        font_size: 10
-        spacing:
-          margin: [null, null, '0', null]
-          padding: [null, null, '0', null]
-        text: Tirsdag
-      type: Label
-    - event_bindings: {click: tir_button_click}
-      layout_properties: {grid_position: 'ZDBUKX,YNRDRQ'}
-      name: tir_button
-      properties:
-        font_size: 25
-        foreground: black
-        spacing:
-          margin: ['0', null, null, null]
-          padding: ['0', '12', '0', '12']
-        text: '0'
-      type: Button
-    - layout_properties: {grid_position: 'PXLERO,PKVRMB'}
-      name: tir_akt_label
-      properties:
-        align: center
-        font_size: 8
-        spacing:
-          margin: ['0', null, null, null]
-          padding: ['0', null, null, null]
-        text: Jogging
-      type: Label
-    layout_properties: {}
-    name: column_panel_1_copy_2
-    properties:
-      role: outlined-card
-      spacing:
-        padding: ['0', null, '0', null]
-    type: ColumnPanel
-  - components:
-    - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
-      name: ons_label
-      properties:
-        align: center
-        font_size: 10
-        spacing:
-          margin: [null, null, '0', null]
-          padding: [null, null, '0', null]
-        text: Onsdag
-      type: Label
-    - event_bindings: {click: ons_button_click}
-      layout_properties: {grid_position: 'IXYRQO,DGJJMZ'}
-      name: ons_button
-      properties:
-        font_size: 25
-        foreground: black
-        spacing:
-          margin: ['0', null, null, null]
-          padding: ['0', '12', '0', '12']
-        text: '0'
-      type: Button
-    - layout_properties: {grid_position: 'SOIAYZ,XAITQX'}
-      name: ons_akt_label
-      properties:
-        align: center
-        font_size: 8
-        spacing:
-          margin: ['0', null, null, null]
-          padding: ['0', null, null, null]
-        text: Boksing
-      type: Label
-    layout_properties: {}
-    name: column_panel_1_copy_3
-    properties:
-      role: outlined-card
-      spacing:
-        padding: ['0', null, '0', null]
-    type: ColumnPanel
-  layout_properties: {grid_position: 'DAWIQI,IXSQQP'}
-  name: flow_panel_1
-  properties: {align: center}
-  type: FlowPanel
-- components:
-  - components:
-    - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
-      name: tor_label
-      properties:
-        align: center
-        font_size: 10
-        spacing:
-          margin: [null, null, '0', null]
-          padding: [null, null, '0', null]
-        text: Torsdag
-      type: Label
-    - event_bindings: {click: tor_button_click}
-      layout_properties: {grid_position: 'QHWKSS,YBOXFJ'}
-      name: tor_button
-      properties:
-        font_size: 25
-        foreground: black
-        spacing:
-          margin: ['0', null, null, null]
-          padding: ['0', '12', '0', '12']
-        text: '0'
-      type: Button
-    - layout_properties: {grid_position: 'JUEBES,WOMSNG'}
-      name: tor_akt_label
-      properties:
-        align: center
-        font_size: 8
-        spacing:
-          margin: ['0', null, null, null]
-          padding: ['0', null, null, null]
-        text: Boksing
-      type: Label
-    name: column_panel_1_copy_4
-    properties:
-      role: outlined-card
-      spacing:
-        padding: ['0', null, '0', null]
-    type: ColumnPanel
-  - components:
-    - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
-      name: fre_label
-      properties:
-        align: center
-        font_size: 10
-        spacing:
-          margin: [null, null, '0', null]
-          padding: [null, null, '0', null]
-        text: Fredag
-      type: Label
-    - event_bindings: {click: fre_button_click}
-      layout_properties: {grid_position: 'IHPYUO,VXIBJA'}
-      name: fre_button
-      properties:
-        font_size: 25
-        foreground: black
-        spacing:
-          margin: ['0', null, null, null]
-          padding: ['0', '12', '0', '12']
-        text: '0'
-      type: Button
-    - layout_properties: {grid_position: 'EAQPVP,FHTBQS'}
-      name: fre_akt_label
-      properties:
-        align: center
-        font_size: 8
-        spacing:
-          margin: ['0', null, null, null]
-          padding: ['0', null, null, null]
-        text: Boksing
-      type: Label
-    name: column_panel_1_copy_5
-    properties:
-      role: outlined-card
-      spacing:
-        padding: ['0', null, '0', null]
-    type: ColumnPanel
-  - components:
-    - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
-      name: lor_label
-      properties:
-        align: center
-        font_size: 10
-        spacing:
-          margin: [null, null, '0', null]
-          padding: [null, null, '0', null]
-        text: Lørdag
-      type: Label
-    - event_bindings: {click: lor_button_click}
-      layout_properties: {grid_position: 'WZOHIV,NVIUBR'}
-      name: lor_button
-      properties:
-        font_size: 25
-        foreground: black
-        spacing:
-          margin: ['0', null, null, null]
-          padding: ['0', '12', '0', '12']
-        text: '0'
-      type: Button
-    - layout_properties: {grid_position: 'ETZXYW,AGFTEO'}
-      name: lor_akt_label
-      properties:
-        align: center
-        font_size: 8
-        spacing:
-          margin: ['0', null, null, null]
-          padding: ['0', null, null, null]
-        text: Boksing
-      type: Label
-    name: column_panel_1_copy_6
-    properties:
-      role: outlined-card
-      spacing:
-        padding: ['0', null, '0', null]
-    type: ColumnPanel
-  layout_properties: {grid_position: 'ARBWFN,ZNHQZN'}
-  name: flow_panel_6
-  properties: {align: center}
-  type: FlowPanel
+  layout_properties: {grid_position: 'LRHKJM,PNXCFA'}
+  name: loggbok_card
+  properties: {role: outlined-card, visible: false}
+  type: ColumnPanel
 container:
   properties:
     spacing:
