--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -5,6 +5,10 @@ components:
     name: login
     properties: {role: outlined-button, text: Logg inn}
     type: Button
+  - layout_properties: {grid_position: 'OHFFZP,NXAFKM'}
+    name: week_offset_label
+    properties: {visible: false}
+    type: Label
   layout_properties: {grid_position: 'ACRWCP,DAEMHS'}
   name: login_card
   properties: {role: outlined-card}
@@ -36,7 +40,8 @@ components:
     properties: {align: center}
     type: FlowPanel
   - components:
-    - layout_properties: {}
+    - event_bindings: {click: button_2_click}
+      layout_properties: {}
       name: button_2
       properties: {icon: 'fa:long-arrow-left', text: ''}
       type: Button
@@ -122,7 +127,7 @@ components:
           spacing:
             margin: ['0', null, null, null]
             padding: ['0', null, null, null]
-          text: Jogging
+          text: ''
         type: Label
       layout_properties: {}
       name: column_panel_1_copy_2
@@ -161,7 +166,7 @@ components:
           spacing:
             margin: ['0', null, null, null]
             padding: ['0', null, null, null]
-          text: Boksing
+          text: ''
         type: Label
       layout_properties: {}
       name: column_panel_1_copy_3
@@ -200,7 +205,7 @@ components:
           spacing:
             margin: ['0', null, null, null]
             padding: ['0', null, null, null]
-          text: Boksing
+          text: ''
         type: Label
       name: column_panel_1_copy_4
       properties:
@@ -243,7 +248,7 @@ components:
           spacing:
             margin: ['0', null, null, null]
             padding: ['0', null, null, null]
-          text: Boksing
+          text: ''
         type: Label
       name: column_panel_1_copy_5
       properties:
@@ -281,7 +286,7 @@ components:
           spacing:
             margin: ['0', null, null, null]
             padding: ['0', null, null, null]
-          text: Boksing
+          text: ''
         type: Label
       name: column_panel_1_copy_6
       properties:
