--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -336,11 +336,31 @@ components:
     name: flow_panel_6
     properties: {align: center}
     type: FlowPanel
-  - event_bindings: {click: logout_click}
-    layout_properties: {grid_position: 'VFQUUC,JCRVEA'}
-    name: logout
-    properties: {role: outlined-button, text: Logg ut}
-    type: Button
+  - components:
+    - layout_properties: {}
+      name: individuell_button
+      properties:
+        role: outlined-button
+        text: |
+          Individuell
+      type: Button
+    - layout_properties: {}
+      name: team_button
+      properties: {role: outlined-button, text: Team}
+      type: Button
+    - layout_properties: {}
+      name: button_3
+      properties: {role: outlined-button, text: Trekningsliste}
+      type: Button
+    - event_bindings: {click: logout_click}
+      layout_properties: {}
+      name: logout
+      properties: {align: center, role: outlined-button, text: Logg ut}
+      type: Button
+    layout_properties: {grid_position: 'ZPVSNA,WTSZQB'}
+    name: flow_panel_7
+    properties: {align: center}
+    type: FlowPanel
   layout_properties: {grid_position: 'LRHKJM,PNXCFA'}
   name: loggbok_card
   properties: {role: outlined-card, visible: false}
