--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -34,7 +34,7 @@ components:
         type: Label
       - layout_properties: {}
         name: deltager_label
-        properties: {text: Donald Duck}
+        properties: {text: ''}
         type: Label
       name: flow_panel_4
       properties: {}
@@ -42,7 +42,7 @@ components:
     - components:
       - layout_properties: {}
         name: label_2
-        properties: {text: 'Team: Andeby'}
+        properties: {text: 'Team: '}
         type: Label
       name: flow_panel_5
       properties: {}
