--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -55,7 +55,7 @@ components:
     - event_bindings: {click: button_2_click}
       layout_properties: {}
       name: button_2
-      properties: {icon: 'fa:long-arrow-left', text: ''}
+      properties: {background: 'theme:Secondary Container', icon: 'fa:long-arrow-left', role: outlined-button, text: ''}
       type: Button
     - name: uke_label
       properties: {align: center, bold: true, role: title, text: 'Uke 20: 12 - 18 mai'}
@@ -63,7 +63,7 @@ components:
     - event_bindings: {click: button_1_click}
       layout_properties: {}
       name: button_1
-      properties: {icon: 'fa:long-arrow-right', text: ''}
+      properties: {background: 'theme:Secondary Container', icon: 'fa:long-arrow-right', role: outlined-button, text: ''}
       type: Button
     layout_properties: {grid_position: 'JAWFBV,BDHRAR'}
     name: flow_panel_2
@@ -352,17 +352,18 @@ components:
     - event_bindings: {click: regler_button_click}
       layout_properties: {}
       name: regler_button
-      properties: {role: outlined-button, text: Regler}
+      properties: {background: 'theme:Secondary Container', role: outlined-button, text: Regler}
       type: Button
     - event_bindings: {click: veil_button_click}
       layout_properties: {}
       name: veil_button
-      properties: {role: outlined-button, text: Brukerveiledning}
+      properties: {background: 'theme:Secondary Container', role: outlined-button, text: Brukerveiledning}
       type: Button
     - event_bindings: {click: individuell_button_click}
       layout_properties: {}
       name: individuell_button
       properties:
+        background: theme:Secondary Container
         role: outlined-button
         text: |
           Individuell
@@ -370,25 +371,25 @@ components:
     - event_bindings: {click: team_button_click}
       layout_properties: {}
       name: team_button
-      properties: {role: outlined-button, text: Team}
+      properties: {background: 'theme:Secondary Container', role: outlined-button, text: Team}
       type: Button
     - event_bindings: {click: trekning_button_click}
       layout_properties: {}
       name: trekning_button
-      properties: {role: outlined-button, text: Trekningsliste}
+      properties: {background: 'theme:Secondary Container', role: outlined-button, text: Trekningsliste}
       type: Button
     - event_bindings: {click: logout_click}
       layout_properties: {}
       name: logout
-      properties: {align: center, role: outlined-button, text: Logg ut}
+      properties: {align: center, background: 'theme:Secondary Container', role: outlined-button, text: Logg ut}
       type: Button
     layout_properties: {grid_position: 'ZPVSNA,WTSZQB'}
     name: flow_panel_7
     properties: {align: center}
     type: FlowPanel
-  layout_properties: {grid_position: 'LRHKJM,PNXCFA'}
+  layout_properties: {grid_position: 'LRHKJM,PNXCFA', row_background: ''}
   name: loggbok_card
-  properties: {role: outlined-card, visible: false}
+  properties: {background: 'theme:Tertiary Container', role: outlined-card, visible: false}
   type: ColumnPanel
 container:
   properties:
