--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -10,7 +10,9 @@ components:
       name: rich_text_1
       properties:
         align: center
-        content: "<h2>Velkommen til Framskritt</h2>\nDu kan logge deg inn med email og bli med. \n"
+        content: |
+          <h2>Velkommen til Framskritt</h2>
+          Du kan logge deg inn med email og bli med. <br>Første gangen må du klikke Sign up for a new account - eller Sign in with Google.
         format: restricted_html
       type: RichText
     layout_properties: {grid_position: 'BGVMVX,UMSRPL'}
