--- a/client_code/Aktivitet/form_template.yaml
+++ b/client_code/Aktivitet/form_template.yaml
@@ -53,7 +53,7 @@ components:
   - event_bindings: {click: button_1_click}
     layout_properties: {grid_position: 'NVIUVF,ZTOUDP'}
     name: button_1
-    properties: {text: import, visible: false}
+    properties: {text: import, visible: true}
     type: Button
   layout_properties: {slot: left-nav}
   name: column_panel_1
