--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -10,9 +10,10 @@ components:
       name: rich_text_1
       properties:
         align: center
-        content: |
+        content: |-
           <h2>Velkommen til Framskritt</h2>
-          Du kan logge deg inn med email og bli med. <br>Første gangen må du klikke Sign up for a new account - eller Sign in with Google.
+          Du kan logge deg inn med email og bli med. <br>Første gangen må du klikke Sign up for a new account - eller Sign in with Google.<br><br>
+          OBS: hvis du bruker Framo email: melding med link for å resette passord går rett i mappen Junk Emails. Husk å sjekke der.
         format: restricted_html
       type: RichText
     layout_properties: {grid_position: 'BGVMVX,UMSRPL'}
