Edited Regler and Aktivitet

--- a/client_code/Regler/form_template.yaml
+++ b/client_code/Regler/form_template.yaml
@@ -68,7 +68,7 @@ components:
               <li><strong>2 poeng:</strong> 1 time aktiv trening</li>
               <li><strong>3 poeng:</strong> 1,5 time aktiv trening</li>
             </ul>
-            <p>Det er tilstrekkelig med 1 poeng per dag for å være med i trekningen.</p>
+            <p>Det er tilstrekkelig med 1 poeng i fem dager for å være med i trekningen i den uken.</p>
 
             <h3>Konkurranseformer</h3>
             <p><strong>Individuell konkurranse:</strong> Resultatlisten føres for hver deltaker.</p>
