--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -417,7 +417,7 @@ components:
     type: ColumnPanel
   layout_properties: {grid_position: 'LRHKJM,PNXCFA', row_background: ''}
   name: loggbok_card
-  properties: {background: 'theme:Tertiary Container', role: outlined-card, visible: false}
+  properties: {background: 'theme:Tertiary Container', role: outlined-card, visible: true}
   type: ColumnPanel
 container:
   properties:
