--- a/anvil.yaml
+++ b/anvil.yaml
@@ -22,7 +22,7 @@ db_schema:
     client: full
     columns:
     - admin_ui: {order: 0, width: 200}
-      name: navn
+      name: konkurransenavn
       type: string
     - admin_ui: {order: 1, width: 200}
       name: fradato
@@ -30,6 +30,9 @@ db_schema:
     - admin_ui: {order: 2, width: 200}
       name: tildato
       type: date
+    - admin_ui: {order: 3, width: 200}
+      name: record
+      type: number
     server: full
     title: Konkurranse
   lag:
