Created lykkehjul.jpg; Edited settings, ServerModule1 and Loggbok

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,5 +1,6 @@
 unique_ids:
   assets:
+    lykkehjul.jpg: '174227380325212014709124.972933'
     standard-page.html: FWNBRYTQ5FYKRMFR5TQCDTKGH36EROKJ
     theme.css: 4XELZEEUTVXOLQDXMJPQ3IRQPNKSRQ3I
   forms:
