Created team_medlemmer, team_medlemmer.RowTemplate4, Trekninger.RowTemplate3 and Resultat_team.RowTemplate5; Edited Loggbok, Resultat_individuell, Resultat_team, ServerModule1 and 1 more

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -15,7 +15,11 @@ unique_ids:
     Resultat_individuell: '1741811702227182415658772.70905'
     Resultat_individuell.RowTemplate2: '1742392641236869575558914.0835'
     Resultat_team: '1741811975028616932128098.1703'
+    Resultat_team.RowTemplate5: '1742419637355746554562853.9523'
     Trekninger: '1741812058837904935935574.9244'
+    Trekninger.RowTemplate3: '1742412342483165474325486.09665'
+    team_medlemmer: '1742417549733112967066025.23576'
+    team_medlemmer.RowTemplate4: '1742417606431323896215273.31647'
   modules: {}
   scripts: {}
   server_modules:
