--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -25,7 +25,7 @@ components:
     name: column_panel_2
     properties: {}
     type: ColumnPanel
-  - layout_properties: {grid_position: 'OHFFZP,NXAFKM'}
+  - layout_properties: {grid_position: 'BCYMBE,CCVAEU'}
     name: week_offset_label
     properties: {visible: false}
     type: Label
@@ -67,7 +67,8 @@ components:
         name: label_1
         properties: {text: 'Deltager:'}
         type: Label
-      - layout_properties: {}
+      - components: []
+        layout_properties: {}
         name: deltager_label
         properties: {text: Donald Duck}
         type: Link
@@ -75,11 +76,14 @@ components:
       properties: {}
       type: FlowPanel
     - components:
-      - layout_properties: {}
-        name: label_2
-        properties: {text: 'Team: Andeby '}
+      - name: label_2
+        properties: {text: 'Team: '}
         type: Label
-      name: flow_panel_5
+      - event_bindings: {click: team_label_click}
+        name: team_label
+        properties: {text: Donald Duck}
+        type: Link
+      name: flow_panel_10
       properties: {}
       type: FlowPanel
     layout_properties: {grid_position: 'XCTPBS,SRACPT'}
