--- a/client_code/Resultat_team/form_template.yaml
+++ b/client_code/Resultat_team/form_template.yaml
@@ -4,6 +4,17 @@ components:
     name: label_1
     properties: {align: center, text: Team resultatliste}
     type: Label
+  - components:
+    - name: team_resultat_repeating_panel
+      properties: {item_template: Resultat_team.RowTemplate5}
+      type: RepeatingPanel
+    layout_properties: {grid_position: 'ZLRLJD,SBUBFU'}
+    name: data_grid_1
+    properties:
+      columns:
+      - {data_key: column_1, id: JKSDUP, title: Team}
+      - {data_key: column_2, id: VJQQOR, title: Poeng}
+    type: DataGrid
   - event_bindings: {click: lukk_button_click}
     layout_properties: {grid_position: 'FACYFA,RKQROA'}
     name: lukk_button
