--- a/client_code/Trekninger/form_template.yaml
+++ b/client_code/Trekninger/form_template.yaml
@@ -2,12 +2,22 @@ components:
 - components:
   - layout_properties: {grid_position: 'MTSGUN,FHFTBQ'}
     name: label_1
-    properties: {align: center, text: Dette er de som frem til nå har kvalifisert seg til neste trekning}
+    properties: {align: center, text: Dette er de som frem til nå har kvalifisert seg til ukens trekning}
     type: Label
+  - components:
+    - name: trekningsliste_repeating_panel
+      properties: {item_template: Trekninger.RowTemplate3}
+      type: RepeatingPanel
+    layout_properties: {grid_position: 'MKIGMV,UJZEPA'}
+    name: data_grid_1
+    properties:
+      columns:
+      - {data_key: column_1, id: JKSDUP, title: Deltager}
+    type: DataGrid
   - event_bindings: {click: lukk_button_click}
     layout_properties: {grid_position: 'FACYFA,RKQROA'}
     name: lukk_button
-    properties: {align: center, role: outlined-button, text: Lukk}
+    properties: {align: center, role: tonal-button, text: Lukk}
     type: Button
   layout_properties: {grid_position: 'VHIKZP,ZCJBQF'}
   name: outlined_card_1
