--- a/client_code/team_medlemmer/RowTemplate4/form_template.yaml
+++ b/client_code/team_medlemmer/RowTemplate4/form_template.yaml
@@ -3,5 +3,9 @@ components:
   name: navn_label
   properties: {}
   type: Label
+- layout_properties: {column: MHDFRT}
+  name: poeng_label
+  properties: {}
+  type: Label
 container: {type: DataRowPanel}
 is_package: true
