Created admin.RowTemplate7; Edited Resultat_individuell, Resultat_individuell.RowTemplate2, ServerModule1, admin and 1 more

--- a/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
+++ b/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
@@ -13,6 +13,10 @@ components:
       margin: ['2', null, '2', null]
       padding: ['2', null, '2', null]
   type: Label
+- layout_properties: {column: LSHEHV}
+  name: team_label
+  properties: {}
+  type: Label
 container:
   properties: {font_size: 10}
   type: DataRowPanel
