--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -1,10 +1,33 @@
 components:
 - components:
   - components:
+    - layout_properties: {}
+      name: label_3
+      properties: {role: headline, text: Admin-meny}
+      type: Label
+    layout_properties: {grid_position: 'OAPUZC,WYSKWU'}
+    name: flow_panel_2
+    properties: {align: center}
+    type: FlowPanel
+  - components:
+    - event_bindings: {click: brukere_click}
+      name: brukere
+      properties: {role: tonal-button, text: Brukere}
+      type: Button
+    - event_bindings: {click: teams_button_click}
+      layout_properties: {}
+      name: teams_button
+      properties: {role: tonal-button, text: Teams}
+      type: Button
     - event_bindings: {click: button_3_click}
       layout_properties: {}
       name: button_3
-      properties: {text: Lag enkeltbruker}
+      properties: {role: tonal-button, text: Lag enkeltbruker}
+      type: Button
+    - event_bindings: {click: import_mang_button_click}
+      layout_properties: {}
+      name: import_mang_button
+      properties: {role: tonal-button, text: Lag mange brukere}
       type: Button
     layout_properties: {grid_position: 'PDOHFX,TLMROV'}
     name: flow_panel_1
@@ -66,21 +89,6 @@ components:
     name: enkeltbruker_card
     properties: {role: tonal-card, visible: false}
     type: ColumnPanel
-  layout_properties: {grid_position: 'DJZTTS,OKSYEP'}
-  name: outlined_card_1
-  properties: {role: outlined-card}
-  type: ColumnPanel
-- components:
-  - components:
-    - event_bindings: {click: import_mang_button_click}
-      layout_properties: {}
-      name: import_mang_button
-      properties: {text: Importer mange brukere}
-      type: Button
-    layout_properties: {grid_position: 'HSPDKX,EBLVIB'}
-    name: flow_panel_9
-    properties: {align: center}
-    type: FlowPanel
   - components:
     - components:
       - layout_properties: {}
@@ -103,25 +111,10 @@ components:
       name: button_4
       properties: {role: tonal-button, text: Opprett mange på en gang}
       type: Button
-    layout_properties: {grid_position: 'UMEOVY,JQZGGS'}
+    layout_properties: {grid_position: 'LDOKBZ,TKAIJG'}
     name: import_mang_card
     properties: {role: tonal-card, visible: false}
     type: ColumnPanel
-  layout_properties: {grid_position: 'GJXLVI,ATHCGL'}
-  name: outlined_card_2
-  properties: {role: outlined-card}
-  type: ColumnPanel
-- components:
-  - components: []
-    layout_properties: {grid_position: 'FXAIQJ,MLADYY'}
-    name: flow_panel_2
-    properties: {align: center}
-    type: FlowPanel
-  - event_bindings: {click: teams_button_click}
-    layout_properties: {grid_position: 'WLRFEA,MPWNJJ'}
-    name: teams_button
-    properties: {text: Admin teams}
-    type: Button
   - components:
     - components:
       - event_bindings: {click: label1_click}
@@ -156,28 +149,34 @@ components:
         - {data_key: column_3, expand: false, id: OJLQEN, title: Poeng, width: 226.5714111328125}
         - {data_key: column_1, id: KFHMOZ, title: ''}
       type: DataGrid
-    layout_properties: {grid_position: 'HZXKJA,BZQCWB'}
+    data_bindings:
+    - {code: '', property: border, writeback: false}
+    layout_properties: {grid_position: 'UFRYFD,KPLJLR'}
     name: team_card
     properties: {role: tonal-card, visible: false}
     type: ColumnPanel
-  layout_properties: {grid_position: 'TDUQMG,HKEXGO'}
-  name: outlined_card_3
+  - components:
+    - components:
+      - name: bruker_repeating_panel
+        properties: {item_template: admin.RowTemplate7}
+        type: RepeatingPanel
+      layout_properties: {grid_position: 'LAJQGS,XBPYDT'}
+      name: data_grid_2
+      properties:
+        columns:
+        - {data_key: column_1, id: JKSDUP, title: email}
+        - {data_key: column_2, id: VJQQOR, title: Navn}
+        - {data_key: column_3, id: OJLQEN, title: Poeng}
+        - {data_key: column_1, id: PJMSOR, title: Team}
+      type: DataGrid
+    layout_properties: {grid_position: 'LUWZDT,FGYWHF'}
+    name: bruker_card
+    properties: {role: tonal-card, visible: false}
+    type: ColumnPanel
+  layout_properties: {grid_position: 'DJZTTS,OKSYEP'}
+  name: outlined_card_1
   properties: {role: outlined-card}
   type: ColumnPanel
-- components:
-  - layout_properties: {grid_position: 'KANHKC,BHDHHN'}
-    name: label_4
-    properties: {align: center, text: Admin brukere}
-    type: Label
-  layout_properties: {grid_position: 'CFDFNB,AHWBTU'}
-  name: outlined_card_4
-  properties: {role: outlined-card}
-  type: ColumnPanel
-- components: []
-  layout_properties: {grid_position: 'MTZIQU,FXVUGJ'}
-  name: flow_panel_4
-  properties: {align: center}
-  type: FlowPanel
 - event_bindings: {click: button_1_click}
   layout_properties: {grid_position: 'RVEJTU,CURSMD'}
   name: button_1
