--- a/client_code/Brukerveiledning/form_template.yaml
+++ b/client_code/Brukerveiledning/form_template.yaml
@@ -4,7 +4,7 @@ components:
     - event_bindings: {click: lukk_button_click}
       layout_properties: {}
       name: lukk_button
-      properties: {role: outlined-button, text: Lukk}
+      properties: {role: filled-button, text: Lukk}
       type: Button
     layout_properties: {grid_position: 'HUGURA,MMKZMD'}
     name: rich_text_1
@@ -58,7 +58,7 @@ components:
     type: RichText
   layout_properties: {grid_position: 'BHNSXP,ZYWMYS'}
   name: column_panel_1
-  properties: {role: elevated-card}
+  properties: {role: tonal-card}
   type: ColumnPanel
 container: {type: ColumnPanel}
 is_package: true
