--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -454,10 +454,11 @@ components:
     type: ColumnPanel
   layout_properties: {grid_position: 'LRHKJM,PNXCFA', row_background: ''}
   name: loggbok_card
-  properties: {background: 'theme:Tertiary Container', role: outlined-card, visible: true}
+  properties: {background: '', role: tonal-card, visible: true}
   type: ColumnPanel
 container:
   properties:
+    background: ''
     spacing:
       margin: ['0', null, null, null]
   type: ColumnPanel
