--- a/client_code/Trekninger/form_template.yaml
+++ b/client_code/Trekninger/form_template.yaml
@@ -17,11 +17,11 @@ components:
   - event_bindings: {click: lukk_button_click}
     layout_properties: {grid_position: 'FACYFA,RKQROA'}
     name: lukk_button
-    properties: {align: center, role: tonal-button, text: Lukk}
+    properties: {align: center, role: filled-button, text: Lukk}
     type: Button
   layout_properties: {grid_position: 'VHIKZP,ZCJBQF'}
   name: outlined_card_1
-  properties: {role: elevated-card}
+  properties: {role: tonal-card}
   type: ColumnPanel
 container: {type: ColumnPanel}
 is_package: true
